--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     "express"
   ],
   "author": "Dan Richardson",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.0"
+  }
 }
