--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/build/bootstrap.js",
+            "program": "${workspaceFolder}/build/config/inversify.config.js",
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
