--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "express": "^4.16.2",
     "inversify": "^4.9.0",
+    "mssql": "^4.1.0",
     "reflect-metadata": "^0.1.10"
   },
   "devDependencies": {
     "@types/express": "^4.11.0",
-    "@types/inversify": "^2.0.33"
+    "@types/inversify": "^2.0.33",
+    "@types/mssql": "^4.0.6"
   }
 }
